Corrección de estilos en la tarjeta de productos en listadoProductos.css

--- a/listadoProductos.html
+++ b/listadoProductos.html
@@ -207,8 +207,8 @@
                     </div>
                 </div>
             </section>
-            <!-- Listado de productos -->
             <section>
+                <!--filtro-->
                 <div class="row mt-5">
                     <div class="col-12 col-md-2 col-lg-2">
                         <div class="contenedor-filtro ">
@@ -247,6 +247,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Listado de productos -->
                     <div class="col-12 col-md-9 col-lg-9">
                         <div class="container">
                             <div class="row">
@@ -261,11 +262,11 @@
                                                 <li class="list-group-item">categoria</li>
                                             </ul>
                                             <div class="row">
-                                                <div class="col-md-6">
+                                                <div class="col-md-12 col-lg-12 mb-3">
                                                     <p class="card-text">Precio: $4000</p>
                                                 </div>
-                                                <div class="col-md-6 text-right">
-                                                    <a href="#" class="btn btn-primary">Comprar</a>
+                                                <div class="col-md-12 col-lg-12 text-right">
+                                                    <a href="producto.html" class="btn btn-primary">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -282,11 +283,11 @@
                                                 <li class="list-group-item">categoria</li>
                                             </ul>
                                             <div class="row">
-                                                <div class="col-md-6">
+                                                <div class="col-md-12 col-lg-12 mb-3">
                                                     <p class="card-text">Precio: $4000</p>
                                                 </div>
-                                                <div class="col-md-6 text-right">
-                                                    <a href="#" class="btn btn-primary">Comprar</a>
+                                                <div class="col-md-12 col-lg-12 text-right">
+                                                    <a href="producto.html" class="btn btn-primary">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -303,11 +304,11 @@
                                                 <li class="list-group-item">categoria</li>
                                             </ul>
                                             <div class="row">
-                                                <div class="col-md-6">
+                                                <div class="col-md-12 col-lg-12 mb-3">
                                                     <p class="card-text">Precio: $4000</p>
                                                 </div>
-                                                <div class="col-md-6 text-right">
-                                                    <a href="#" class="btn btn-primary">Comprar</a>
+                                                <div class="col-md-12 col-lg-12 text-right">
+                                                    <a href="producto.html" class="btn btn-primary">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -324,11 +325,11 @@
                                                 <li class="list-group-item">categoria</li>
                                             </ul>
                                             <div class="row">
-                                                <div class="col-md-6">
+                                                <div class="col-md-12 col-lg-12 mb-3">
                                                     <p class="card-text">Precio: $4000</p>
                                                 </div>
-                                                <div class="col-md-6 text-right">
-                                                    <a href="#" class="btn btn-primary">Comprar</a>
+                                                <div class="col-md-12 col-lg-12 text-right">
+                                                    <a href="producto.html" class="btn btn-primary">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -345,11 +346,11 @@
                                                 <li class="list-group-item">categoria</li>
                                             </ul>
                                             <div class="row">
-                                                <div class="col-md-6">
+                                                <div class="col-md-12 col-lg-12">
                                                     <p class="card-text">Precio: $4000</p>
                                                 </div>
-                                                <div class="col-md-6 text-right">
-                                                    <a href="#" class="btn btn-primary">Comprar</a>
+                                                <div class="col-md-12 col-lg-12 text-right">
+                                                    <a href="producto.html" class="btn btn-primary">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -366,11 +367,11 @@
                                                 <li class="list-group-item">categoria</li>
                                             </ul>
                                             <div class="row">
-                                                <div class="col-md-6">
+                                                <div class="col-md-12 col-lg-12">
                                                     <p class="card-text">Precio: $4000</p>
                                                 </div>
-                                                <div class="col-md-6 text-right">
-                                                    <a href="#" class="btn btn-primary">Comprar</a>
+                                                <div class="col-md-12 col-lg-12 text-right">
+                                                    <a href="producto.html" class="btn btn-primary">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -387,11 +388,11 @@
                                                 <li class="list-group-item">categoria</li>
                                             </ul>
                                             <div class="row">
-                                                <div class="col-md-6">
+                                                <div class="col-md-12 col-lg-12">
                                                     <p class="card-text">Precio: $4000</p>
                                                 </div>
-                                                <div class="col-md-6 text-right">
-                                                    <a href="#" class="btn btn-primary">Comprar</a>
+                                                <div class="col-md-12 col-lg-12 text-right">
+                                                    <a href="producto.html" class="btn btn-primary">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -408,11 +409,11 @@
                                                 <li class="list-group-item">categoria</li>
                                             </ul>
                                             <div class="row">
-                                                <div class="col-md-6">
+                                                <div class="col-md-12 col-lg-12">
                                                     <p class="card-text">Precio: $4000</p>
                                                 </div>
-                                                <div class="col-md-6 text-right">
-                                                    <a href="#" class="btn btn-primary">Comprar</a>
+                                                <div class="col-md-12 col-lg-12 text-right">
+                                                    <a href="producto.html" class="btn btn-primary">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -429,11 +430,11 @@
                                                 <li class="list-group-item">categoria</li>
                                             </ul>
                                             <div class="row">
-                                                <div class="col-md-6">
+                                                <div class="col-md-12 col-lg-12">
                                                     <p class="card-text">Precio: $4000</p>
                                                 </div>
-                                                <div class="col-md-6 text-right">
-                                                    <a href="#" class="btn btn-primary">Comprar</a>
+                                                <div class="col-md-12 col-lg-12 text-right">
+                                                    <a href="producto.html" class="btn btn-primary">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
