--- a/pago.html
+++ b/pago.html
@@ -21,10 +21,10 @@
                     <img class="img-fluid profile" src="img/perfil.png" />
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Perfil</a></li>
-                    <li><a class="dropdown-item" href="#">Inventario Admi</a></li>
-                    <li><a class="dropdown-item" href="#">Historial de Compras</a></li>
-                    <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
+                    <li><a class="dropdown-item fs-5" href="#">Perfil</a></li>
+                    <li><a class="dropdown-item fs-5" href="#">Inventario Admi</a></li>
+                    <li><a class="dropdown-item fs-5" href="#">Historial de Compras</a></li>
+                    <li><a class="dropdown-item fs-5" href="#">Cerrar Sesión</a></li>
                 </ul>
             </div>
             <div class="container-fluid">
@@ -50,7 +50,7 @@
 
                     <!-- Modal Header -->
                     <div class="modal-header">
-                        <h4 class="modal-title">Inicio de sesion</h4>
+                        <h4 class="modal-title fs-1">Inicio de sesion</h4>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
 
@@ -58,23 +58,23 @@
                     <div class="modal-body">
                         <form>
                             <div class="mb-3">
-                                <label for="username" class="form-label">Username</label>
-                                <input type="text" class="form-control" id="username" placeholder="Enter your username">
+                                <label for="username" class="form-label fs-4">Nombre de usuario</label>
+                                <input type="text" class="form-control fs-5" id="username" placeholder="Enter your username">
                             </div>
                             <div class="mb-3">
-                                <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="password" placeholder="Enter your password">
+                                <label for="password" class="form-label fs-4">Contraseña</label>
+                                <input type="password" class="form-control fs-5" id="password" placeholder="Enter your password">
                             </div>
                             <div class="d-grid gap-2">
-                                <button type="submit" class="btn btn-primary">Sign In</button>
-                                <button type="button" class="btn btn-secondary" data-bs-toggle="modal"
-                                    data-bs-target="#registerModal">Register</button>
+                                <button type="submit" class="btn btn-primary fs-4">Iniciar sesion</button>
+                                <button type="button" class="btn btn-secondary fs-4" data-bs-toggle="modal"
+                                    data-bs-target="#registerModal">Registrarse</button>
                             </div>
                         </form>
                     </div>
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-danger fs-5" data-bs-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
@@ -85,32 +85,32 @@
                 <div class="modal-content">
                     <!-- Modal Header -->
                     <div class="modal-header">
-                        <h4 class="modal-title">Registration</h4>
+                        <h4 class="modal-title fs-1">Registro</h4>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
                     <!-- Modal body -->
                     <div class="modal-body">
                         <form>
                             <div class="mb-3">
-                                <label for="name" class="form-label">Name</label>
-                                <input type="text" class="form-control" id="name" placeholder="Enter your name">
+                                <label for="name" class="form-label fs-4">Nomnre</label>
+                                <input type="text" class="form-control fs-5" id="name" placeholder="Enter your name">
                             </div>
                             <div class="mb-3">
-                                <label for="email" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                                <label for="email" class="form-label fs-4">Email</label>
+                                <input type="email" class="form-control fs-5" id="email" placeholder="Enter your email">
                             </div>
                             <div class="mb-3">
-                                <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="password" placeholder="Enter your password">
+                                <label for="password" class="form-label fs-4">Contraseña</label>
+                                <input type="password" class="form-control fs-5" id="password" placeholder="Enter your password">
                             </div>
                             <div class="d-grid gap-2">
-                                <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Register</button>
+                                <button type="submit" class="btn btn-primary fs-4" data-bs-dismiss="modal">Registrarse</button>
                             </div>
                         </form>
                     </div>
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-danger fs-5" data-bs-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
@@ -226,7 +226,7 @@
     </body>
     <footer class="mt-3 p-5 justify-content-right">
         <!-- Contenido del pie de página -->
-        <a class="p-5 text-white" href="#">About Us</a>
-        <a class="p-5 text-white" href="#">Contacto</a>
+        <a class="p-5 text-white fs-4" href="#">About Us</a>
+        <a class="p-5 text-white fs-4" href="#">Contacto</a>
     </footer>
 </html>
