--- a/producto.html
+++ b/producto.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
 
-        <title>Título de la página</title>
+        <title>Producto</title>
     </head>
     <header>
         <!-- barra de navegación-->
@@ -59,11 +59,11 @@
                         <form>
                             <div class="mb-3">
                                 <label for="username" class="form-label fs-4">Nombre de usuario</label>
-                                <input type="text" class="form-control fs-5" id="username" placeholder="Enter your username">
+                                <input type="text" class="form-control fs-5" id="username" placeholder="Ingresa tu nombre de usuario">
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label fs-4">Contraseña</label>
-                                <input type="password" class="form-control fs-5" id="password" placeholder="Enter your password">
+                                <input type="password" class="form-control fs-5" id="password" placeholder="Ingresa tu contraseña">
                             </div>
                             <div class="d-grid gap-2">
                                 <button type="submit" class="btn btn-primary fs-4">Iniciar sesion</button>
@@ -74,7 +74,7 @@
                     </div>
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-danger fs-5" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-danger fs-5" data-bs-dismiss="modal">Cerrar</button>
                     </div>
                 </div>
             </div>
@@ -92,16 +92,16 @@
                     <div class="modal-body">
                         <form>
                             <div class="mb-3">
-                                <label for="name" class="form-label fs-4">Nomnre</label>
-                                <input type="text" class="form-control fs-5" id="name" placeholder="Enter your name">
+                                <label for="name" class="form-label fs-4">Nombre de usuario</label>
+                                <input type="text" class="form-control fs-5" id="name" placeholder="Ingresa tu nombre de usuario">
                             </div>
                             <div class="mb-3">
                                 <label for="email" class="form-label fs-4">Email</label>
-                                <input type="email" class="form-control fs-5" id="email" placeholder="Enter your email">
+                                <input type="email" class="form-control fs-5" id="email" placeholder="Ingresa tu email">
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label fs-4">Contraseña</label>
-                                <input type="password" class="form-control fs-5" id="password" placeholder="Enter your password">
+                                <input type="password" class="form-control fs-5" id="password" placeholder="Ingresa tu contraseña">
                             </div>
                             <div class="d-grid gap-2">
                                 <button type="submit" class="btn btn-primary fs-4" data-bs-dismiss="modal">Registrarse</button>
@@ -110,7 +110,7 @@
                     </div>
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-danger fs-5" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-danger fs-5" data-bs-dismiss="modal">Cerrar</button>
                     </div>
                 </div>
             </div>
