Corrección de estilos en el footer y en la tarjeta de productos en listadoProductos.css

--- a/listadoProductos.html
+++ b/listadoProductos.html
@@ -214,7 +214,7 @@
                         <div class="contenedor-filtro ">
                             <div class="row">
                                 <div class="col-12 header-filtro">
-                                    <h3 class="text-center fs-4">Filtros</h3>
+                                    <h3 class="text-center fs-4 texto-filtro">Filtros</h3>
                                 </div>
                                 <div class="col-12 contenedor-dropdown mt-1">
                                     <button class="boton-filtro fs-4" data-bs-toggle="collapse"
@@ -266,7 +266,7 @@
                                                     <p class="card-text fs-4">Precio: $4000</p>
                                                 </div>
                                                 <div class="col-md-12 col-lg-12 text-right">
-                                                    <a href="producto.html" class="btn btn-primary fs-5">Comprar</a>
+                                                    <a href="producto.html" class="btn boton-comprar fs-5">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -287,7 +287,7 @@
                                                     <p class="card-text fs-4">Precio: $4000</p>
                                                 </div>
                                                 <div class="col-md-12 col-lg-12 text-right">
-                                                    <a href="producto.html" class="btn btn-primary fs-5">Comprar</a>
+                                                    <a href="producto.html" class="btn boton-comprar fs-5">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -308,7 +308,7 @@
                                                     <p class="card-text fs-4">Precio: $4000</p>
                                                 </div>
                                                 <div class="col-md-12 col-lg-12 text-right">
-                                                    <a href="producto.html" class="btn btn-primary fs-5">Comprar</a>
+                                                    <a href="producto.html" class="btn boton-comprar fs-5">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -329,7 +329,7 @@
                                                     <p class="card-text fs-4">Precio: $4000</p>
                                                 </div>
                                                 <div class="col-md-12 col-lg-12 text-right">
-                                                    <a href="producto.html" class="btn btn-primary fs-5">Comprar</a>
+                                                    <a href="producto.html" class="btn boton-comprar fs-5">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -350,7 +350,7 @@
                                                     <p class="card-text fs-4">Precio: $4000</p>
                                                 </div>
                                                 <div class="col-md-12 col-lg-12 text-right">
-                                                    <a href="producto.html" class="btn btn-primary fs-5">Comprar</a>
+                                                    <a href="producto.html" class="btn boton-comprar fs-5">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -371,7 +371,7 @@
                                                     <p class="card-text fs-4">Precio: $4000</p>
                                                 </div>
                                                 <div class="col-md-12 col-lg-12 text-right">
-                                                    <a href="producto.html" class="btn btn-primary fs-5">Comprar</a>
+                                                    <a href="producto.html" class="btn boton-comprar fs-5">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -392,7 +392,7 @@
                                                     <p class="card-text fs-4">Precio: $4000</p>
                                                 </div>
                                                 <div class="col-md-12 col-lg-12 text-right">
-                                                    <a href="producto.html" class="btn btn-primary fs-5">Comprar</a>
+                                                    <a href="producto.html" class="btn boton-comprar fs-5">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -413,7 +413,7 @@
                                                     <p class="card-text fs-4">Precio: $4000</p>
                                                 </div>
                                                 <div class="col-md-12 col-lg-12 text-right">
-                                                    <a href="producto.html" class="btn btn-primary fs-5">Comprar</a>
+                                                    <a href="producto.html" class="btn boton-comprar fs-5">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -434,7 +434,7 @@
                                                     <p class="card-text fs-4">Precio: $4000</p>
                                                 </div>
                                                 <div class="col-md-12 col-lg-12 text-right">
-                                                    <a href="producto.html" class="btn btn-primary fs-5">Comprar</a>
+                                                    <a href="producto.html" class="btn boton-comprar fs-5">Comprar</a>
                                                 </div>
                                             </div>
                                         </div>
