Añadir sección de estado con/sin Stock en producto.html

--- a/producto.html
+++ b/producto.html
@@ -173,6 +173,7 @@
                                 magni, quidem adipisci consequuntur incidunt ipsam quae, odit ex! Suscipit ab, nulla
                                 perferendis porro repellendus voluptatem. Nobis, voluptate?
                             </p>
+                            <h3>Estado con/sin Stock</h3>
                             <p class="precio-producto my-4">Precio del producto</p>
                             <div class="row">
                                 <div class="col my-4">
