Corrección de estilos en la tarjeta de pago y en el footer en pago.html

--- a/pagoexitoso.html
+++ b/pagoexitoso.html
@@ -118,9 +118,9 @@
     </header>
     <body>
         <main>
-            <div class="container mt-3">
+            <div class="container contenedor-pagoexitoso mt-5">
                 <div class="card">
-                <div class="card-body text-center">
+                <div class="card-body text-center mt-5">
                     <h1>¡Pago Exitoso!</h1>
                     <p class="lead">Tu pago se ha realizado correctamente.</p>
                     <img src="img/pagoExitoso.svg" alt="Imagen de éxito" class="img-fluid" style="width: 200px;">
