--- a/producto.html
+++ b/producto.html
@@ -118,6 +118,12 @@
     </header>
     <body>
         <main>
+            <!--boton de volver atras-->
+            <section class="d-flex justify-content-start">
+                <div class="container m-3">
+                    <a href="index.html" class="btn"><img src="img/angulo-derecho.svg" alt=""></a>
+                </div>
+            </section>
             <section>
                 <div class="row row-cols-2">
                     <div class="col-12 col-sm-6 col-md-6 col-lg-6 d-flex justify-content-center">
@@ -173,7 +179,7 @@
                                 magni, quidem adipisci consequuntur incidunt ipsam quae, odit ex! Suscipit ab, nulla
                                 perferendis porro repellendus voluptatem. Nobis, voluptate?
                             </p>
-                            <h3>Estado con/sin Stock</h3>
+                            <h4>Estado con/sin Stock</h4>
                             <p class="precio-producto my-4">Precio del producto</p>
                             <div class="row">
                                 <div class="col my-4">
