Corrección de estilos en la tarjeta de pago y en el footer en pago.html, se agrega el boton volver atras a carrito, pago y producto

--- a/carrito.html
+++ b/carrito.html
@@ -118,9 +118,15 @@
     </header>
     <body>
         <main>
+            <!--boton de volver atras-->
+            <section class="d-flex justify-content-start">
+                <div class="container m-2">
+                    <a href="index.html" class="btn boton-volver"><img src="img/back-svgrepo-com.svg" alt=""></a>
+                </div>
+            </section>
             <section>
                 <div class="row">
-                    <div class="col-12 mt-5">
+                    <div class="col-12 mt-2">
                         <h1 class="text-center">Carrito de compras</h1>
                     </div>
                 </div>
