--- a/producto.html
+++ b/producto.html
@@ -120,8 +120,8 @@
         <main>
             <!--boton de volver atras-->
             <section class="d-flex justify-content-start">
-                <div class="container m-3">
-                    <a href="index.html" class="btn"><img src="img/angulo-derecho.svg" alt=""></a>
+                <div class="container m-2">
+                    <a href="index.html" class="btn boton-volver"><img src="img/back-svgrepo-com.svg" alt=""></a>
                 </div>
             </section>
             <section>
