--- a/listadoProductos.html
+++ b/listadoProductos.html
@@ -461,7 +461,7 @@
     </body>
     <footer class="mt-3 p-5 justify-content-right">
         <!-- Contenido del pie de página -->
-        <a class="p-5 text-white fs-4" href="#">About Us</a>
-        <a class="p-5 text-white fs-4" href="#">Contacto</a>
+        <a class="p-5 text-white fs-4" href="sobreNosotros.html">Sobre sobreNosotros</a>
+        <a class="p-5 text-white fs-4" href="contacto.html">Contacto</a>
     </footer>
 </html>
