--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="/css/contacto.css" />
+    <link rel="stylesheet" href="css/sobreNosotros.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
@@ -127,43 +127,48 @@
     <main>
         <!--boton de volver atras-->
         <section class="d-flex justify-content-start">
-            <div class="container m-2">
+            <div class="container">
                 <a href="index.html" class="btn boton-volver"><img src="img/back-svgrepo-com.svg" alt=""></a>
             </div>
         </section>
-        <section class="d-flex justify-content-center">
-            <div class="container contenedor-contacto">
+        <section>
+            <div class="container py-5">
                 <div class="row">
                     <div class="col-md-6">
-                        <h2 class="display-5">Contactanos</h2>
-                        <p class="fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper diam quis
-                            mattis semper. Nunc nec dui eget quam ultricies mattis. Nullam ac felis semper, lobortis
-                            quam sit amet, ullamcorper quam. Maecenas sit amet mollis eros. Sed ultrices dui eget magna
-                            tincidunt, ac tincidunt magna faucibus.</p>
-                        <address>
-                            <strong class="">DRUIDS</strong><br>
-                            123 Main Street<br>
-                            Anytown, CA 12345<br>
-                            <a href="mailto:info@example.com">info@example.com</a><br>
-                            <a href="tel:+1234567890">(123) 456-7890</a>
-                        </address>
+                        <img src="img/image.jpg" class="img-fluid rounded-start" alt="About Us">
                     </div>
                     <div class="col-md-6">
-                        <form>
-                            <div class="mb-3">
-                                <label for="name" class="form-label fs-5">Nombre:</label>
-                                <input type="text" class="form-control" id="name" placeholder="Ingresa tu nombre">
-                            </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label fs-5">Email:</label>
-                                <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo">
-                            </div>
-                            <div class="mb-3">
-                                <label for="message" class="form-label fs-5">Mensaje:</label>
-                                <textarea class="form-control" id="message" rows="3"></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Enviar mensaje</button>
-                        </form>
+                        <h2 class="display-5">Sobre nosotros</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper diam quis mattis semper.
+                            Nunc nec dui eget quam ultricies mattis. Nullam ac felis semper, lobortis quam sit amet,
+                            ullamcorper quam. Maecenas sit amet mollis eros. Sed ultrices dui eget magna tincidunt, ac
+                            tincidunt magna faucibus.</p>
+                        <p>Morbi euismod arcu ut sapien ultricies, id mattis libero faucibus. Nam at lectus in quam
+                            convallis efficitur. Sed tincidunt, lectus et aliquam ultricies, elit dui laoreet nunc, eget
+                            consectetur arcu orci non libero. Donec ac diam nec lectus tincidunt ullamcorper eget et
+                            libero.</p>
+                        <p>Morbi euismod arcu ut sapien ultricies, id mattis libero faucibus. Nam at lectus in quam
+                            convallis efficitur. Sed tincidunt, lectus et aliquam ultricies, elit dui laoreet nunc, eget
+                            consectetur arcu orci non libero. Donec ac diam nec lectus tincidunt ullamcorper eget et
+                            libero.</p>
+                    </div>
+                    <div class="col-md-6 mt-5">
+                        <h2 class="display-5">Nuestra vision</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper diam quis mattis semper.
+                            Nunc nec dui eget quam ultricies mattis. Nullam ac felis semper, lobortis quam sit amet,
+                            ullamcorper quam. Maecenas sit amet mollis eros. Sed ultrices dui eget magna tincidunt, ac
+                            tincidunt magna faucibus.</p>
+                        <p>Morbi euismod arcu ut sapien ultricies, id mattis libero faucibus. Nam at lectus in quam
+                            convallis efficitur. Sed tincidunt, lectus et aliquam ultricies, elit dui laoreet nunc, eget
+                            consectetur arcu orci non libero. Donec ac diam nec lectus tincidunt ullamcorper eget et
+                            libero.</p>
+                        <p>Morbi euismod arcu ut sapien ultricies, id mattis libero faucibus. Nam at lectus in quam
+                            convallis efficitur. Sed tincidunt, lectus et aliquam ultricies, elit dui laoreet nunc, eget
+                            consectetur arcu orci non libero. Donec ac diam nec lectus tincidunt ullamcorper eget et
+                            libero.</p>
+                    </div>
+                    <div class="col-md-6 mt-5">
+                        <img src="img/image.jpg" class="img-fluid rounded-start" alt="About Us">
                     </div>
                 </div>
             </div>
@@ -175,5 +180,4 @@
     <a class="p-5 text-white fs-4" href="sobreNosotros.html">Sobre sobreNosotros</a>
     <a class="p-5 text-white fs-4" href="contacto.html">Contacto</a>
 </footer>
-
 </html>
