Corrección de estilos en la tarjeta de perfil.html

--- a/perfil.html
+++ b/perfil.html
@@ -129,21 +129,15 @@
             <div class="row">
                 <div class="col-6">
                     <div class="card mb-3">
+                        <img src="https://placehold.co/300x200/007bff/ffffff?text=Card+Image" class="card-img-top img-fluid rounded-start" alt="Card Image">
                         <div class="card-body">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0">Full
-                                        Name</h6>
-                                </div>
-                                <div class="col-sm-9 text-secondary">
-                                    Kenneth Valdez
-                                </div>
-                            </div>
+                          <h5 class="card-title">Card Title</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper diam quis mattis semper. Nunc nec dui eget quam ultricies mattis. Nullam ac felis semper, lobortis quam sit amet, ullamcorper quam. Maecenas sit amet mollis eros. Sed ultrices dui eget magna tincidunt, ac tincidunt magna faucibus.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="card mb-3">
+                    <div class="card m-3">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-sm-3">
