--- a/carrito.html
+++ b/carrito.html
@@ -21,9 +21,9 @@
                     <img class="img-fluid profile" src="img/perfil.png" />
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item fs-5" href="#">Perfil</a></li>
-                    <li><a class="dropdown-item fs-5" href="#">Inventario Admi</a></li>
-                    <li><a class="dropdown-item fs-5" href="#">Historial de Compras</a></li>
+                    <li><a class="dropdown-item fs-5" href="perfil.html">Perfil</a></li>
+                    <li><a class="dropdown-item fs-5" href="inventario.html">Inventario Admi</a></li>
+                    <li><a class="dropdown-item fs-5" href="pedidos.html">Historial de pedidos</a></li>
                     <li><a class="dropdown-item fs-5" href="#">Cerrar Sesión</a></li>
                 </ul>
             </div>
