--- a/perfil.html
+++ b/perfil.html
@@ -22,9 +22,9 @@
                 <img class="img-fluid profile" src="img/perfil.png" />
             </button>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item fs-5" href="#">Perfil</a></li>
-                <li><a class="dropdown-item fs-5" href="#">Inventario Admi</a></li>
-                <li><a class="dropdown-item fs-5" href="#">Historial de Compras</a></li>
+                <li><a class="dropdown-item fs-5" href="perfil.html">Perfil</a></li>
+                <li><a class="dropdown-item fs-5" href="inventario.html">Inventario Admi</a></li>
+                <li><a class="dropdown-item fs-5" href="pedidos.html">Historial de pedidos</a></li>
                 <li><a class="dropdown-item fs-5" href="#">Cerrar Sesión</a></li>
             </ul>
         </div>
@@ -214,6 +214,12 @@
                             </div>
                             <div class="col-sm-9 text-secondary">
                                 <input type="text" class="form-control" value="Concepcion, San andres 123">
+                            </div>
+                        </div>
+                        <div class="col-md-12 mb-2">
+                            <div class="form-group">
+                                <label for="imagenesProducto">Imágen de perfil</label>
+                                <input type="file" class="form-control"  multiple>
                             </div>
                         </div>
                         <div class="row">
