Corrección de títulos en los archivos HTML

--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
 
-    <title>Contacto</title>
+    <title>Sobre nosotros</title>
 </head>
 <header>
     <!-- barra de navegación-->
