--- a/contacto.html
+++ b/contacto.html
@@ -134,7 +134,7 @@
         <section class="d-flex justify-content-center">
             <div class="container contenedor-contacto">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 contenedor-texto">
                         <h2 class="display-5">Contactanos</h2>
                         <p class="fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper diam quis
                             mattis semper. Nunc nec dui eget quam ultricies mattis. Nullam ac felis semper, lobortis
