--- a/pedidos.html
+++ b/pedidos.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
 
-    <title>Inventario</title>
+    <title>Historial de pedidos</title>
 </head>
 <header>
     <!-- barra de navegación-->
