Creacion de pagina Historial de compras . Actualizar enlaces de navegación en varios archivos HTML

--- a/pagoexitoso.html
+++ b/pagoexitoso.html
@@ -22,8 +22,9 @@
                 </button>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item fs-5" href="perfil.html">Perfil</a></li>
-                <li><a class="dropdown-item fs-5" href="inventario.html">Inventario Admi</a></li>
-                <li><a class="dropdown-item fs-5" href="pedidos.html">Historial de pedidos</a></li>
+                    <li><a class="dropdown-item fs-5" href="inventario.html">Inventario Admi</a></li>
+                    <li><a class="dropdown-item fs-5" href="pedidos.html">Historial de pedidos</a></li>
+                    <li><a class="dropdown-item fs-5" href="historialCompra.html">Historial de compras</a></li>
                     <li><a class="dropdown-item fs-5" href="#">Cerrar Sesión</a></li>
                 </ul>
             </div>
