--- a/inventario.html
+++ b/inventario.html
@@ -25,6 +25,8 @@
                 <li><a class="dropdown-item fs-5" href="perfil.html">Perfil</a></li>
                 <li><a class="dropdown-item fs-5" href="inventario.html">Inventario Admi</a></li>
                 <li><a class="dropdown-item fs-5" href="pedidos.html">Historial de pedidos</a></li>
+                <li><a class="dropdown-item fs-5" href="historialCompra.html">Historial de compras</a></li>
+                <li><a class="dropdown-item fs-5" href="historialCompra.html">Historial de compras</a></li>
                 <li><a class="dropdown-item fs-5" href="#">Cerrar Sesión</a></li>
             </ul>
         </div>
