Agrega estilos y validaciones de contraseña en el formulario de registro

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
                                 <input type="email"  class="form-control fs-5" id="email-registro" name="email-registro" placeholder="Ingresa tu email" required>                            </div>
                             <div class="mb-3 form-group">
                                 <label for="password-registro" class="form-label fs-4">Contraseña</label>
-                                <div class="text-danger font-weight-bold" id="requerimiento-longitud"><p class="requerimiento">Al menos 8 caracteres</p></div>
-                                <div class="text-danger font-weight-bold" id="requerimiento-mayuscula"><p class="requerimiento">Al menos una letra mayúscula</p></div>
-                                <div class="text-danger font-weight-bold" id="requerimiento-minuscula"><p class="requerimiento">Al menos una letra minúscula</p></div>
-                                <div class="text-danger font-weight-bold" id="requerimiento-numero"><p class="requerimiento">Al menos un número</p></div>
-                                <div class="text-danger font-weight-bold" id="requerimiento-especial"><p class="requerimiento">Al menos un carácter especial</p></div>                                
+                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-longitud"><p class="requerimiento">Al menos 8 caracteres</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>
+                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-mayuscula"><p class="requerimiento">Al menos una letra mayúscula</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>
+                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-minuscula"><p class="requerimiento">Al menos una letra minúscula</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>
+                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-numero"><p class="requerimiento">Al menos un número</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>
+                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-especial"><p class="requerimiento">Al menos un carácter especial</p><img class="validador" src="img/empty-svgrepo-com.svg"></div>                                
                                 <input type="password" class="form-control fs-5" id="password-registro" name="password-registro" placeholder="Ingresa tu contraseña">
                             </div>
                             <div class="mb-3">
