Agrega validaciones de formulario de inicio de sesión y registro

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <!-- barra de navegación-->
         <nav class="navbar navbar-expand-sm">
             <div>
+                <!--boton perfil-->
                 <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
                     <img class="img-fluid profile" src="img/perfil.png" />
                 </button>
@@ -37,8 +38,8 @@
                     <a class="navbar-brand" href="index.html">DRUIDS</a>
                 </div>
             </div>
-            <!-- Botones de perfil y carrito de compra -->
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#myModal">
+            <!-- Botones de inicio secion y carrito de compra -->
+            <button id="boton-inicio-sesion" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#myModal">
                 <img class="img-fluid profile" src="img/perfil.png" />
             </button>
             <button type="button" class="btn">
